tests/evaluate/success/complexoperators.src
main() {
    (10 + (10 / 2) / 5) * (5 * 2);
}
