tests/evaluate/fail/mainattop.src
main() {
    print 1;
}

fun2() {
    print 2;
}
